src/index.css
@import url('https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@0,800;1,800&family=Exo:ital,wght@0,100;0,200;0,300;1,100;1,200;1,300&family=Kanit:ital,wght@0,300;0,400;0,500;1,300;1,400;1,500&display=swap');

@import url('https://fonts.googleapis.com/css2?family=Bungee&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');

@import url('https://fonts.googleapis.com/css2?family=Anton+SC&display=swap');

@import url('https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap');

@import url('https://fonts.googleapis.com/css2?family=Archivo:ital,wght@0,100..900;1,100..900&display=swap');

html {
  height: 100%;
  background-color: #ff6600;
}

body {
  height: 100%;
  background-color: #ff6600;
}

#root {
  /*? neon orange */
  background-color: #ff6600;
  /*? neon green */
  /* background-color: #00ff66; */
  /*? neon indigo */
  /* background-color: #6600ff; */
  color: #000;
  transition: color .5s ease-in-out;
}

@media (min-width: 320px) {

  .App {
    /* height: 100vh; */
  }

  .container {
    padding: 0 10px;
    margin: auto;
    position: relative;
    width: 100%;
    max-width: 450px;
  }

  #logo {
    max-width: 60px;
  }

  .offcanvas {
    /* background-color: rgba(255, 87, 51, .5); */
    width: 80%!important;
    background-color: #ff5733!important;
  }

  .navbar {
    background-color: #ff583300!important;
    position: absolute;
    z-index: 1;
  }

  .navbar-brand {
    padding-top: 0!important;
  }

  .navbar-toggler {
    border: none;
    color: #fff!important;
    padding: 0!important;
    border-radius: none!important;
  }

  .navbar-toggler-icon {
    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba(255, 255, 255, 1)' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e") !important;
    font-size: 25px!important;
    pointer-events: none;
    /* margin-bottom: 15px!important; */
  }

  .navbar-toggler:focus {
    -webkit-box-shadow: none!important;
    -moz-box-shadow: none!important;
    box-shadow: none!important;
    /* figure out a different focus state animation */
  }

  #main-section {
    padding-top: 60px;
    text-align: right;
    height: 100%;
  }

  .main-h2 {
    font-family: 'Archivo Black', sans-serif;
    color: #fff;
    font-size: 35px;
    /* line-height: 1; */
    margin-top: 35px;
    margin-bottom: 15px;
    line-height: .75;
    /* padding-right: 15px; */
    display: block;
    /* transform: rotateZ(10deg); */
    transform: skew(.015turn, 7.5deg);
    text-shadow: -20px 20px 0px rgba(255,255,255,0.1);
    transition: text-shadow .5s ease-in-out;
    transition: color .5s ease-in-out;
  }

  .main-ul {
    list-style-type: none;
  }

  .main-li {
    font-family: 'Archivo Black', sans-serif;
    font-size: 35px;
    line-height: .95;
    padding-bottom: 7.5px;
    /* padding-right: 15px; */
    display: block;
    /* transform: rotateZ(10deg); */
    transform: skew(.015turn, 7.5deg);
    text-shadow: -20px 20px 0px rgba(0,0,0,0.05);
    transition: text-shadow .3s ease-in-out;
  }

  .main-li:hover {
    color: #fff;
  }

  .noHover {
    pointer-events: none!important;
  }

  .megasenet {
    transform: translateX(-30px) skew(.015turn, 7.5deg);
  }

  .nav-link {
    font-family: 'Archivo', sans-serif;
    font-size: 18px;
    text-align: left;
    font-weight: 600;
    color: #fff!important;
  }
  
  .nav-nums {
    color: #000;
    font-weight: 400;
    font-size: 12px;
    margin-right: 5px;
    vertical-align: 2px;
  }

  .nav-descript {
    font-family: 'Archivo', sans-serif;
    color: #fff;
    font-weight: 400;
    font-size: 16px;
  }

  .nav-email {
    font-family: 'Archivo', sans-serif;
    color: #fff;
    font-weight: 700;
    font-size: 16px;
  }

  .navbar-text {
    padding: 0!important;
    margin: 0!important;
    text-align: right;
    font-size: 16px;
    font-weight: 600;
  }

  .navbar-text:nth-child(2) {
    margin-bottom: 15px!important;
    color: black;
  }
  .navbar-text:nth-child(3) {
    /* color: black; */
  }
  .navbar-text:nth-child(4) {
    color: black;
  }

  .nav-container {
    margin-top: 25px;
  }

  .navbar-collapse {
    display: flex;
    flex-direction: column;
    align-items: flex-end;
    justify-content: space-between!important;
  }
  

}

@media (min-width: 400px) {
  
}

@media (min-width: 568px) {

}

@media (min-width: 768px) {

}

@media (min-width: 1024px) {

}

@media (min-width: 1300px) {

}

/* 
body {
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  background-color: #171c22;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
    monospace;
}

.about {
  background-color: #393E46;
  margin: 2rem auto 0 auto;
  border-radius: 5px;
  border: 1px solid #4c5158;
  box-shadow: 3px 3px 14px -4px #000000;
}

#about-name {
  text-align: left;
  font-size: 5.8rem;
  margin: 0;
  line-height: .85;
  font-family: 'Exo 2', sans-serif;
  font-style: italic;
  padding: 2rem 2rem 0 2rem;
  color: #EEEEEE;
  text-shadow: 2px 2px 2px #FD7014, 4px 4px 2px #000000;
}

#about-title {
  text-align: center;
  margin: 0;
  font-family: 'Exo', sans-serif;
  font-weight: 200;
  font-size: 1.5rem;
  padding-right: 3.5rem;
  color: #888b90;
  padding-bottom: .25rem;
}

.paragraph {
  font-family: 'Kanit', sans-serif;
  font-weight: 300;
  text-align: center;
  text-indent: 1.5rem;
  font-size: 1rem;
  margin-top: 1rem;
  margin: 0;
  color: #EEEEEE;
  background-color: #222831;
  border-radius: 5px;
  border: 1px solid #888b90;
  padding: .85rem;
  box-shadow: inset 0px 0px 15px 0px #000000;
}

.paragraph:hover {
  border: 1px solid #FD7014;
}

.line {
  border-color: #FD7014;
  border-width: 1px;
  opacity: 1;
}

.technologies {
  background-color: #393E46;
  margin: 2rem auto;
  border-radius: 5px;
  border: 1px solid #4c5158;
  box-shadow: 3px 3px 14px -4px #000000;
}

.section-header {
  font-family: 'Exo 2', sans-serif;
  font-style: italic;
  color: #EEEEEE;
  font-size: 2.5rem;
  text-shadow: 1px 1px 1px #FD7014, 3px 3px 2px #000000;
}

.slash {
  color: #FD7014;
}

.projects {
  background-color: #393E46;
  margin: 2rem auto;
  border-radius: 5px;
  border: 1px solid #4c5158;
  box-shadow: 3px 3px 14px -4px #000000;
}

#header {
  background-color: #FD7014;
  padding: 0;
}

#logo {
  font-family: 'Exo 2', sans-serif;
  font-style: italic;
  color: #ffffff;
  text-shadow: 3px 3px 3px #000000;
  line-height: 2rem;
}

.nav-link {
  font-family: 'Exo', sans-serif;
  color: #ffffff;
  font-size: 1.25rem;
  line-height: 1.25rem;
}

.contact {
  background-color: #393E46;
  margin: 2rem auto;
  border-radius: 5px;
  border: 1px solid #4c5158;
  box-shadow: 3px 3px 14px -4px #000000;
}

.contact-info {
  font-family: 'Kanit', sans-serif;
  font-weight: 300;
  text-align: center;
  font-size: 1rem;
  margin-top: 1rem;
  margin: 0;
  color: #EEEEEE;
  background-color: #222831;
  border-radius: 5px;
  border: 1px solid #888b90;
  padding: .85rem;
  box-shadow: inset 0px 0px 15px 0px #000000;
}

.contact-info:hover {
  border: 1px solid #FD7014;
}

.link-contact {
  text-decoration: none;
  color: #ffffff;
}

.link-contact:hover {
  color: #FD7014;
}

::-webkit-scrollbar {
  background-color: #171c22;
}

::-webkit-scrollbar-thumb {
  background-color: #FD7014;
}

.container {
  max-width: 720px;
}

.image {
  border-radius: 5px;
}

.project-button {
  padding: 0;
  border: none;
  background: none;
}

#project-modal-header {
  background-color: #393E46;
  border: 1px solid #FD7014;
  font-size: 1.5rem;
}

#project-modal-title {
  font-family: 'Exo 2', sans-serif;
  font-style: italic;
  color: #EEEEEE;
  font-size: 1rem;
  text-shadow: 1px 1px 1px #FD7014, 3px 3px 2px #000000;
  font-size: 2rem;
  padding: 0;
}

#project-modal-body {
  background-color: #393E46;
  border: 1px solid #FD7014;
  border-top: none;
  border-bottom: none;
  color: #EEEEEE;
  box-shadow: inset 0px 0px 15px 0px #000000;
}

#project-modal-footer {
  background-color: #393E46;
  border: 1px solid #FD7014;
}

#project-description {
  margin: 0;
  margin-top: 1rem;
  font-family: 'Kanit', sans-serif;
  font-weight: 300;
  text-align: left;
  text-indent: 1.5rem;
  font-size: 1rem;
  color: #EEEEEE;
}

.carousel-img {
  border-radius: 5px!important;
}

#project-modal-carousel {
  border-radius: 5px!important;
  border: 1px solid #888b90;
  background-color: #222831;
}

.modal-link {
  font-family: 'Exo', sans-serif;
  color: #ffffff;
  font-size: 1.15rem;
  text-decoration: none;
}

.modal-link:hover {
  color: #FD7014;
} */

